cabal-version: 2.2
name: juspay-backend
version: 1.0.0
synopsis: Production-ready payment orchestration backend
description: A Haskell-based payment orchestration system inspired by Juspay,
             featuring fraud detection, intelligent routing, retry mechanisms,
             and comprehensive monitoring.
homepage: https://github.com/yourusername/juspay-backend
license: MIT
license-file: LICENSE
author: Your Name
maintainer: your.email@example.com
copyright: 2025 Your Name
category: Finance, Web
build-type: Simple
extra-source-files: README.md, CHANGELOG.md, schema.sql

library
  exposed-modules:
      Config
      Errors
      Validation
      Fraud
      Router
      Gateways
      Models
      Monitoring
      Retries
      Webhooks
      Vault
  hs-source-dirs: src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-export-lists
               -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
               -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.14 && < 5
    , aeson >= 2.0 && < 2.3
    , async >= 2.2 && < 2.3
    , base64-bytestring >= 1.2 && < 1.3
    , bytestring >= 0.10 && < 0.13
    , containers >= 0.6 && < 0.7
    , cryptohash-sha256 >= 0.11 && < 0.12
    , cryptonite >= 0.30 && < 0.31
    , hedis >= 0.15 && < 0.17
    , http-client >= 0.7 && < 0.8
    , http-client-tls >= 0.3 && < 0.4
    , http-types >= 0.12 && < 0.13
    , monad-logger >= 0.3 && < 0.4
    , mtl >= 2.2 && < 2.4
    , persistent >= 2.13 && < 2.15
    , persistent-postgresql >= 2.13 && < 2.15
    , persistent-template >= 2.12 && < 2.13
    , prometheus-client >= 1.0 && < 1.2
    , servant >= 0.19 && < 0.21
    , servant-server >= 0.19 && < 0.21
    , text >= 1.2 && < 2.2
    , time >= 1.9 && < 1.13
    , transformers >= 0.5 && < 0.7
    , uuid >= 1.3 && < 1.4
    , wai >= 3.2 && < 3.3
    , wai-cors >= 0.2 && < 0.3
    , wai-extra >= 3.1 && < 3.2
    , warp >= 3.3 && < 3.5
    , scotty >= 0.12 && < 0.23
    , postgresql-simple >= 0.6 && < 0.8
    , unordered-containers >= 0.2 && < 0.3
    , vector >= 0.12 && < 0.14
    , random >= 1.2 && < 1.3
    , memory >= 0.17 && < 0.19
    , stm >= 2.5 && < 2.6
    , retry >= 0.9 && < 0.10
    , ekg-core >= 0.1 && < 0.2
    , regex-tdfa >= 1.3 && < 1.4
    , scientific >= 0.3 && < 0.4
    , hashable >= 1.3 && < 1.5
    , case-insensitive >= 1.2 && < 1.3
    , network >= 3.1 && < 3.3
    , extra >= 1.7 && < 1.8
    , deepseq >= 1.4 && < 1.6
    , safe >= 0.3 && < 0.4
    , say >= 0.1 && < 0.2
  default-language: Haskell2010

executable juspay-backend
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >= 4.14 && < 5
    , juspay-backend
    , aeson
    , async
    , bytestring
    , http-types
    , servant
    , servant-server
    , text
    , time
    , wai
    , wai-cors
    , wai-extra
    , warp
    , scotty
    , containers
    , uuid
    , mtl
    , say
  default-language: Haskell2010

test-suite juspay-backend-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.14 && < 5
    , juspay-backend
    , aeson >= 2.0
    , hspec >= 2.8 && < 2.12
    , hspec-discover >= 2.8 && < 2.12
    , QuickCheck >= 2.14 && < 2.15
    , text >= 1.2
    , transformers
    , persistent >= 2.13
    , persistent-postgresql >= 2.13
    , hedis >= 0.14
    , bytestring >= 0.10
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover

benchmark juspay-backend-bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs: bench
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >= 4.14 && < 5
    , juspay-backend
    , criterion >= 1.5 && < 1.7
    , aeson
    , text
    , http-client >= 0.7
    , bytestring >= 0.10
    , time >= 1.9
    , hashable >= 1.4
    , hedis >= 0.14
  default-language: Haskell2010